--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -9,3 +9,5 @@ $primaryColorDarken: #bb8c00;
 $secondaryColor: #ff4747;
 $secondaryColorLighter: #ff7b7b;
 $secondaryColorDarken: #a33434;
+
+$darkColor: #1c1c1c;
