--- a/src/components/Gallery/Gallery.module.scss
+++ b/src/components/Gallery/Gallery.module.scss
@@ -2,25 +2,16 @@
 
 .gallery {
   flex-grow: 1;
-  width: 100%;
   height: 100vh;
 
   .wrapperLayer {
-    width: 100%;
+    display: flex;
     height: 100%;
-    overflow-y: auto;
-    // Animation
-    opacity: 0;
-    transform: translateX(50px);
+    overflow-y: hidden;
     transition: all 1.2s;
 
-    &.show {
-      opacity: 1;
-      transform: translateX(0);
-    }
-
     section {
-      width: 100%;
+      flex-shrink: 0;
       height: 100%;
       color: white;
       display: flex;
@@ -33,11 +24,10 @@
       }
 
       .image {
-        width: 80vw;
+        user-select: none;
         height: 80vh;
         object-fit: cover;
-        border-radius: 30px;
-        border: 8px solid $primaryColor;
+        border-radius: 10px;
       }
     }
   }
