chore: new photo

--- a/src/components/Gallery/Gallery.module.scss
+++ b/src/components/Gallery/Gallery.module.scss
@@ -4,3 +4,11 @@
   flex-grow: 1;
   position: relative;
 }
+
+.tab {
+  position: absolute;
+  top: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 10000000000;
+}
