--- a/src/components/Picture/Picture.module.scss
+++ b/src/components/Picture/Picture.module.scss
@@ -10,22 +10,23 @@
 
   .imageWrapper {
     background-color: #f5f5f5;
-    padding: 5px;
     border-radius: 10px;
     box-shadow: 4px 0 16px #333;
+
     .image {
       user-select: none;
       object-fit: cover;
       border-radius: 7px;
       background-color: #eee;
     }
+
     .label {
       display: block;
       font-size: 12px;
       color: #666;
       transform-origin: left;
       transform: scale(0.7);
-      margin: 6px 0 2px 4px;
+      margin-left: 4px;
     }
   }
 }
